k8s/rabbitmq/rabbitmq-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: rabbitmq-route
  namespace: rabbit
spec:
  entryPoints:
    - rabbitmq
  routes:
    - match: HostSNI(`*`)
      services:
        - name: rabbit-rabbitmq
          port: 5672
